--- a/BSL/SkMonCloExtBSL.tex
+++ b/BSL/SkMonCloExtBSL.tex
@@ -2135,9 +2135,10 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
 %% 2. normal coherence conditions fail here
         %% 3. exchange rule captures the skew structure
         
-\subsection{Focused system with tag annotations}\label{seq:sym-focus}
-\SkMILL \text{ }also enjoys focusing property, a sub-proof system in which derivations are in normal form corresponding to the equivalence relation $\circeq$.
+\subsection{A Tagged Focused Sequent Calculus for \SkMILL}\label{seq:sym-focus}
+\SkMILL\ also enjoys a tagged focused subsystem of derivations corresponding to normal forms for the equivalence relation $\circeq$ in (\ref{fig:circeq:sym}).
 \begin{equation}\label{eq:focus:sym}
+          \arraycolsep=-8pt
   \footnotesize
   \begin{array}{lc}
     \text{(context)} &
@@ -2145,7 +2146,7 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
       \infer[\ex]{S \mid \Gamma , A^{x} \spl \Delta , \Lambda \vdash^{x}_{\C} C}{
         S \mid \Gamma \spl \Delta , A^{x} , \Lambda \vdash^{x}_{\C} C
       }
-    \qquad
+    \quad
       \infer[\RI 2 \C]{S \mid \text{ } \spl \Gamma \vdash^{x}_{\C} C}{
         S \mid \Gamma \vdash^{x}_{\RI} C
       }
@@ -2154,16 +2155,16 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
     \text{(right invertible)} & %\\[-4pt] &
     \proofbox{
       \infer[\lright]{S \mid \Gamma \vdash^{x}_{\RI} A \lolli B}{S \mid A^{x} \spl \Gamma \vdash^{x}_{\C} B}
-    \qquad
+    \quad
     \infer[\LI 2 \RI]{S \mid \Gamma \vdash^{x}_{\RI} P}{S \mid \Gamma \vdash^{x}_{\LI} P}
     }
     \\[10pt]
     \text{(left invertible)} & %\\[-4pt] &
     \proofbox{
       \infer[\unitl]{\I \mid \Gamma \vdash_{\LI} P}{{-} \mid \Gamma \vdash_{\LI} P}
-    \qquad
+    \quad
     \infer[\tl]{A \ot B \mid \Gamma \vdash_{\LI} P}{A \mid B \spl \Gamma \vdash_{\C} P}
-    \qquad
+    \quad
     \infer[\Pass 2 \LI]{T \mid \Gamma \xvdash_{\LI} P}{T \mid \Gamma \xvdash_{\Pass} P}
     }
     \\[10pt]
@@ -2172,7 +2173,7 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
     \infer[\pass]{{-} \mid A^{x} , \Gamma \xvdash_{\Pass} P }{
       A\mid \Gamma^{\circ} \vdash_{\LI} P
     }
-    \qquad
+    \quad
     \infer[\F 2 \Pass]{T \mid \Gamma \xvdash_{\Pass} P}{
       T \mid \Gamma \xvdash_{\F} P
     }
@@ -2180,7 +2181,7 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
     \\[10pt]
     \text{(focusing)} &    %\\[-4pt] &
     \proofbox{\infer[\ax]{X \mid \quad \xvdash_{\F} X}{}
-    \qquad
+    \quad
     \infer[\unitr]{{-} \mid \quad \xvdash_{\F} \I}{}
     }
     \\[6pt]
@@ -2190,7 +2191,7 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
       &
       {-} \mid \Delta^{\circ} \vdash_{\RI} B
     }
-    \qquad
+    \quad
     \infer[\lleft]{A \lolli B \mid \Gamma , \Delta \xvdash_{\F} P}{
       {-} \mid \Gamma^{\circ} \vdash_{\RI} A
       &
@@ -2201,85 +2202,85 @@ Notice the difference with the usual structural law $\sigma$ of symmetry of Mac 
     }
   \end{array}
 \end{equation}
+There are two main differences with the non-commutative focused calculus in (\ref{eq:focus}):
 \begin{itemize}
-  \item Given any sequent $S \mid \Gamma \spl \Delta \vdash_{\C} C$, we start proof search from phase $\C$ by moving formulae in context. A context in a phase $\C$ sequent is split into two parts, $\Gamma \spl \Delta$ where formulae in $\Gamma$ are ready to be moved and formulae in $\Delta$ have been already moved.
-  We use rule $\ex$ to move one formula at a time until every formula is moved, then we switch to phase $\RI$.
-  \item From bottom-up perspective, there are two rules would add new formulae in context, $\lright$ and $\tl$.
-  Following the spirit of our focus system, the premises of these two rules have to go back to phase $\C$ in order to move new formulae to a correct position in context.
+\item Bottom-up proof search now starts in a new phase $\C$, where formulae in context are permuted. The search in phase $\C$ starts from a sequent $S \mid \Gamma \spl ~ \vdash_{\C} C$ and ends in a sequent $S \mid ~ \spl \Gamma' \vdash_{\C} C$, where $\Gamma'$ is a permutation of $\Gamma$.
+  %Given any sequent $S \mid \Gamma \spl \Delta \vdash_{\C} C$, we start proof search from phase $\C$ by moving formulae in context.
+  During this process, the context is split into two parts $\Gamma \spl \Delta$, where formulae in $\Gamma$ are ready to be moved and formulae in $\Delta$ have been already moved to their correct position.
+  The rule $\ex$ moves one formula at a time (the rightmost one in the left side of the context $\Gamma$) until every formula is moved somewhere to the right of the separator $\spl$. When this happens, proof search continues in phase $\RI$. Notice that the sequent and formulae in context may also be tagged and tags are preserved during the permutation phase. An important difference wrt. the  non-commutative focused calculus is the fact that now tagged and untagged formulae in context are mixed, while in (\ref{eq:focus}) all tagged formulae necessarily appear at the right end of the context.
+  \item The other difference is in rules $\lright$ and $\tl$, which, under the bottom-up reading of the rules, are the only two rules where new formulae are added to the context. The premises of these rules now have to go back to phase $\C$ in order to move the new formulae $A$ to its correct position in the context via an application of the rule $\ex$.
 \end{itemize}
-\begin{theorem}
-  The focused sequent calculus \ref{eq:focus:sym} is sound and complete wrt. the sequent calculus \ref{eq:seqcalc:sym}: there is a one-to-one correspondence between the set of derivations of $S \mid \Gamma \vdash A$ quotiented by $\circeq$ and the set of derivations of $S \mid \Gamma \spl \quad \vdash_{\C} A$.
+\begin{theorem}\label{thm:focus:sym}
+  The focused sequent calculus in (\ref{eq:focus:sym}) is sound and complete wrt. the sequent calculus of Section \ref{sec:skmill}: there is a one-to-one correspondence between the set of derivations of $S \mid \Gamma \vdash A$ quotiented by $\circeq$ and the set of derivations of $S \mid \Gamma \spl \quad \vdash_{\C} A$.
 \end{theorem}
-\begin{proof}
-  We obtain soundness by defining embedding functions $\mathsf{emb}_{ph} : S \mid \Gamma \vdash^{x}_{ph} A \to S \mid \Gamma \vdash A$ for all $ph \in \{ \RI , \LI , \Pass , \F \}$ and $\mathsf{emb}_{\C} : S \mid \Gamma \spl \Delta \vdash^{x}_{\C} \vdash C \to S \mid \Gamma , \Delta \vdash A$, which erase all phase and tag annotations.
-
-  Completeness is justified by proving following rules are admissible in phase $\C$.
-  \begin{equation}\label{eq:admis:sym}
+%\begin{proof}
+  Soundness is obrained by defining embedding functions $\mathsf{emb}_{\C} : S \mid \Gamma \spl \Delta \vdash^{x}_{\C} \vdash C \to S \mid \Gamma , \Delta \vdash A$ and $\mathsf{emb}_{ph} : S \mid \Gamma \vdash^{x}_{ph} A \to S \mid \Gamma \vdash A$, for all $ph \in \{ \RI , \LI , \Pass , \F \}$, which erase all phase and tag annotations.  Completeness is justified by proving the following rules are admissible in phase $\C$:
+  \begin{equation*}\label{eq:admis:sym}
     \hspace*{-4mm}
 	\footnotesize
       \begin{array}{c}
-        \infer[\ax^{\C}]{A \mid \quad \spl \quad \vdash_{\C} A}{}
-        \quad
-        \infer[\unitr^{\C}]{{-} \mid \quad \spl \quad \vdash_{\C} \I}{}
-    \\[6pt]
-    \infer[\unitl^{\C}]{\I \mid \Gamma \spl \Delta \vdash_{\C} C}{{-} \mid \Gamma \spl \Delta \vdash_{\C} C}
-    \quad
-    \infer[\tl^{\C}]{A \ot B \mid \Gamma \spl \Delta \vdash_{\C} C}{A \mid B, \Gamma \spl \Delta \vdash_{\C} C}
+        \infer[\ax^{\C}]{A \mid ~ \spl ~ \vdash_{\C} A}{}
     \quad
     \infer[\pass^{\C}]{{-} \mid \Gamma \spl \Delta \vdash_{\C} C}{A \mid \Gamma \spl \Delta \vdash_{\C} C}
-    \\[6pt]
+        \quad
         \infer[\ex^{\C}]{S \mid \Gamma_0 , B , A , \Gamma_1 \spl \Delta \vdash_{\C} C}{
           S \mid \Gamma_0 , A , B , \Gamma_1 \spl \Delta \vdash_{\C} C
         }
-        \qquad
-        \infer[\lright^{\C}]{S \mid \Gamma \spl \Delta \vdash_{\C} A \lolli B}{
-          S \mid \Gamma , A \spl \Delta \vdash_{\C} B
-        }
     \\[6pt]
         \infer[\lleft^{\C}]{A \lolli B \mid \Gamma , \Delta \spl \Lambda \vdash_{\C} C}{
-        {-} \mid \Gamma \spl \quad \vdash_{\C} A
+        {-} \mid \Gamma \spl ~ \vdash_{\C} A
         &
         B \mid \Delta \spl \Lambda \vdash_{\C} C
         }
-        \qquad
+        \quad
+    \infer[\unitl^{\C}]{\I \mid \Gamma \spl \Delta \vdash_{\C} C}{{-} \mid \Gamma \spl \Delta \vdash_{\C} C}
+    \quad
+    \infer[\tl^{\C}]{A \ot B \mid \Gamma \spl \Delta \vdash_{\C} C}{A \mid B, \Gamma \spl \Delta \vdash_{\C} C}
+    \\[6pt]
         \infer[\tr^{\C}]{S \mid \Gamma , \Delta  \spl \Lambda \vdash_{\C} A \ot B}{
-          S \mid \Gamma \spl \quad  \vdash_{\C} A
+          S \mid \Gamma \spl ~  \vdash_{\C} A
           &
           {-} \mid \Delta \spl \Lambda \vdash_{\C} B
         }
+        \quad
+        \infer[\unitr^{\C}]{{-} \mid ~ \spl ~ \vdash_{\C} \I}{}
+        \quad
+        \infer[\lright^{\C}]{S \mid \Gamma \spl \Delta \vdash_{\C} A \lolli B}{
+          S \mid \Gamma , A \spl \Delta \vdash_{\C} B
+        }
       \end{array}
-    \end{equation}
-  From aforementioned admissible rules, we can define a focusing function $\mathsf{focus} : S \mid \Gamma \vdash A \to S \mid \Gamma \spl \quad \vdash_{\C} A$ by induction on derivations in \ref{eq:seqcalc:sym}.
-  \begin{align*}
-	\ax &\defeq \ax^{\C}
-	\\
-	\unitr &\defeq \unitr^{\C}
-	\\
-	\unitl \text{ } f &\defeq \unitl^{\C} \text{ } (\mathsf{focus} \text{ } f)
-	\\
-	\tl \text{ } f &\defeq \tl^{\C} \text{ } (\mathsf{focus} \text{ } f)
-	\\
-	\pass \text{ } f &\defeq \pass^{\C} \text{ } (\mathsf{focus} \text{ } f)
-	\\
-	\ex \text{ } f &\defeq \ex^{\C} \text{ } (\mathsf{focus} \text{ } f)
-	\\
-	\lright \text{ } f &\defeq \lright^{\C} \text{ } (\mathsf{focus} \text{ } f)
-	\\
-	\lleft \text{ } (f , g) &\defeq \lleft^{\C} \text{ } (\mathsf{focus} \text{ } f , \mathsf{focus} \text{ } g)
-	\\
-	\tr \text{ } (f , g) &\defeq \tr^{\C} \text{ } (\mathsf{focus} \text{ } f , \mathsf{focus} \text{ } g)
-  \end{align*}
-  
-  Following three properties of $\mathsf{focus}$ validate the theorem, the set of derivations of $S \mid \Gamma \vdash A$ quotiented by $\circeq$ are in one-to-one correspondence with the set of derivations of $S \mid \Gamma \spl \quad \vdc A$
+    \end{equation*}
+  From the admissibility of these rules, we can define a focusing function $\mathsf{focus} : S \mid \Gamma \vdash A \to S \mid \Gamma \spl \quad \vdash_{\C} A$ by induction on the input derivation. % in \ref{eq:seqcalc:sym}.
+%   \begin{align*}
+% 	\ax &\defeq \ax^{\C}
+% 	\\
+% 	\unitr &\defeq \unitr^{\C}
+% 	\\
+% 	\unitl \text{ } f &\defeq \unitl^{\C} \text{ } (\mathsf{focus} \text{ } f)
+% 	\\
+% 	\tl \text{ } f &\defeq \tl^{\C} \text{ } (\mathsf{focus} \text{ } f)
+% 	\\
+% 	\pass \text{ } f &\defeq \pass^{\C} \text{ } (\mathsf{focus} \text{ } f)
+% 	\\
+% 	\ex \text{ } f &\defeq \ex^{\C} \text{ } (\mathsf{focus} \text{ } f)
+% 	\\
+% 	\lright \text{ } f &\defeq \lright^{\C} \text{ } (\mathsf{focus} \text{ } f)
+% 	\\
+% 	\lleft \text{ } (f , g) &\defeq \lleft^{\C} \text{ } (\mathsf{focus} \text{ } f , \mathsf{focus} \text{ } g)
+% 	\\
+% 	\tr \text{ } (f , g) &\defeq \tr^{\C} \text{ } (\mathsf{focus} \text{ } f , \mathsf{focus} \text{ } g)
+%   \end{align*}
+  Theorem \ref{thm:focus:sym} is then proved by showing the following three properties, proving that the set of derivations of $S \mid \Gamma \vdash A$ quotiented by $\circeq$ is in bijection with with the set of derivations of $S \mid \Gamma \spl \quad \vdc A$:
   \begin{enumerate}
-    \item For all $f \text{ } g : S \mid \Gamma \vdash A$, if $f \circeq g$ then $\mathsf{focus} \text{ } f = \mathsf{focus} \text{ } g$.
+    \item For all $f, g : S \mid \Gamma \vdash A$, if $f \circeq g$ then $\mathsf{focus} \text{ } f = \mathsf{focus} \text{ } g$.
     \item Given any $f : S \mid \Gamma \vdash A$, $\mathsf{emb}_{\C} \text{ } (\mathsf{focus} \text{ } f) \circeq f$.
     \item Given any $f : S \mid \Gamma \spl \Delta \vdc A$, $\mathsf{focus} \text{ } (\mathsf{emb}_{\C} \text{ } f) = f$.
   \end{enumerate}
-  The first states that normal form of derivations in the same equivalence class is unique.
-  The second and the last entail that $\mathsf{focus}$ and $\mathsf{emb}_{\C}$ are inverses of each other.
-\end{proof}
-We show how to adopt $\lright^{*}$ and $\tr_{\Gamma'}^{\RI}$ in the new focused calculus and build a bridge between $\tr^{\C}$ and $\tr_{\Gamma'}^{\RI}$.
+%  The first states that normal form of derivations in the same equivalence class is unique.
+%  The second and the last entail that $\mathsf{focus}$ and $\mathsf{emb}_{\C}$ are inverses of each other.
+%\end{proof}
+  Similarly to the non-commutative case, the main challange for the construction of $\mathsf{focus}$ lies in proving the admissibility of $\tr^{\C}$, the right $\ot$-rule in phase $\C$. 
+  We show how to adopt $\lright^{*}$ and $\tr_{\Gamma'}^{\RI}$ in the new focused calculus and build a bridge between $\tr^{\C}$ and $\tr_{\Gamma'}^{\RI}$.
 
 \begin{definition}
     (Interleaving context)
