--- a/BSL/SkMonCloExtBSL.tex
+++ b/BSL/SkMonCloExtBSL.tex
@@ -1789,10 +1789,10 @@
         
 	\section{A Commutative Extension of \SkNMILL}\label{sec:comm}
 	Veltri \cite{veltri:coherence:2021} has recently investigated the proof theory of skew \emph{symmetric} monoidal categories. These are a variant of Mac Lane's symmetric monoidal categories originally introduced by Bourke and Lack \cite{bourke:lack:braided:2020} where the  natural isomorphism representing symmetry involves \emph{three} objects rather than two.
-	Following the ideas in Veltri's study, we discuss a commutative extension of \SkNMILL\ \ref{eq:seqcalc}, that we call \SkMILL\ (dropping the \texttt{N} for `non-commutative') and its commection to symmetric skew monoidal closed categories.
+	Following the ideas in Veltri's study, we discuss a commutative extension of \SkNMILL\ \ref{eq:seqcalc}, that we call \SkMILL\ (dropping the \texttt{N} for `non-commutative') and its connection to symmetric skew monoidal closed categories.
         
 	\subsection{A Sequent Calculus for \SkMILL}\label{sec:skmill}
-        A sequent calculus for \SkMILL\ is obtained by adding the following \emph{restricted} exchange rule to the collection of infererence rules in (\ref{eq:seqcalc}):
+        A sequent calculus for \SkMILL\ is obtained by adding the following \emph{restricted} exchange rule to the collection of inference rules in (\ref{eq:seqcalc}):
 %	Derivations in \SkMILL \text{ }are inductively generated according to the rules below.
 	\begin{equation}\label{eq:seqcalc:sym}
 %	\def\arraystretch{2.5}
@@ -1827,7 +1827,7 @@
             }
 %	\end{array}
 	\end{equation}
-        An application of rule $\ex_{A,B}$ results in the swapping of two adjacent formulae $A$ and $B$ in the context. But notice that the exchange of the formula in the stoup (when it exists) and a formula in context is not allowed. This implies that a derivation correponding to the structural law $s$ of skew symmetric monoidal closed categories (see Definition \ref{def:symm-skewcat}) exixts, while a derivation corresponding to the usual symmetry of (non-skew) symmetric monoidal categories does not:
+        An application of rule $\ex_{A,B}$ results in the swapping of two adjacent formulae $A$ and $B$ in the context. But notice that the exchange of the formula in the stoup (when it exists) and a formula in context is not allowed. This implies that a derivation corresponding to the structural law $s$ of skew symmetric monoidal closed categories (see Definition \ref{def:symm-skewcat}) exists, while a derivation corresponding to the usual symmetry of (non-skew) symmetric monoidal categories does not:
     \begin{equation}\label{eq:s}
     \footnotesize
     \proofbox{
@@ -2280,7 +2280,7 @@ There are two main differences with the non-commutative focused calculus in (\re
 %  The first states that normal form of derivations in the same equivalence class is unique.
 %  The second and the last entail that $\mathsf{focus}$ and $\mathsf{emb}_{\C}$ are inverses of each other.
 %\end{proof}
-  Similarly to the non-commutative case, the main challange for the construction of $\mathsf{focus}$ lies in proving the admissibility of $\tr^{\C}$, the right $\ot$-rule in phase $\C$. 
+  Similarly to the non-commutative case, the main challenge for the construction of $\mathsf{focus}$ lies in proving the admissibility of $\tr^{\C}$, the right $\ot$-rule in phase $\C$. 
   We show how to adopt $\lright^{*}$ and $\tr_{\Gamma'}^{\RI}$ in the new focused calculus and build a bridge between $\tr^{\C}$ and $\tr_{\Gamma'}^{\RI}$.
 
 \begin{definition}
@@ -2385,7 +2385,7 @@ There are two main differences with the non-commutative focused calculus in (\re
                 &
                 \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
                 &
-                \Gamma_0 ; \Gamma_1 \bowtie \Gamma
+                \deduce{\Gamma_0 ; \Gamma_1 \bowtie \Gamma}{\iota}
                 &
                 \Gamma_1 \lrwavy \Gamma'_1
             }
@@ -2395,7 +2395,7 @@ There are two main differences with the non-commutative focused calculus in (\re
                 &
                 \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
                 &
-                \Gamma_0 ; \Gamma_1 \bowtie \Gamma
+                \deduce{\Gamma_0 ; \Gamma_1 \bowtie \Gamma}{\iota}
                 &
                 \Gamma_1 \lrwavy \Gamma'_1
             }
@@ -2405,7 +2405,7 @@ There are two main differences with the non-commutative focused calculus in (\re
                 &
                 \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
                 &
-                \Gamma_0 ; \Gamma_1 \bowtie \Gamma
+                \deduce{\Gamma_0 ; \Gamma_1 \bowtie \Gamma}{\iota}
                 &
                 \Gamma_1 \lrwavy \Gamma'_1
             }
@@ -2415,7 +2415,7 @@ There are two main differences with the non-commutative focused calculus in (\re
                 &
                 \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
                 &
-                \Gamma_0 ; \Gamma_1 \bowtie \Gamma
+                \deduce{\Gamma_0 ; \Gamma_1 \bowtie \Gamma}{\iota}
                 &
                 \Gamma_1 \lrwavy \Gamma'_1
             }
@@ -2423,124 +2423,121 @@ There are two main differences with the non-commutative focused calculus in (\re
     \end{equation}
 \end{proposition}
 \begin{proof}
-	Proof is done by mutual induction on left premises. Notice that we use $\Gamma^{x}$ indicating some formulae in $\Gamma$ are tagged.
-
-	There are two cases for $\tr_{\Gamma'}^{\RI}$:
-	\begin{enumerate}
-		\item $\tr_{\Gamma'}^{\RI} \text{ } (\lright \text{ } (\ex \text{ } (\RI 2 \C \text{ } f)) , g)$
-		% \defeq \tr_{\Gamma' , A}^{\RI} \text{ } (f , g)
-		\begin{displaymath}
-			\footnotesize
-			\begin{array}{cc}
-			%     \proofbox{
-			%     \infer[\tr^{\RI}_{\Gamma'_1}]{S \mid \Gamma_0 , \Delta \vdash_{\RI} \ldbc \Gamma'_1 \mid (A \lolli B) \rdbc_{\lolli} \ot C}{
-			%         \infer[\lright]{S \mid \Gamma' , \Gamma'' \vdash_{\RI} A \lolli B}{
-			%             \infer[\ex]{S \mid A \spl \Gamma' , \Gamma'' \vdc B}{
-			%                 \infer[\RI 2 \C]{S \mid \quad \spl \Gamma' , A , \Gamma'' \vdash_{\C} B}{
-			%                     \deduce{S \mid \Gamma' , A , \Gamma'' \vdash_{\RI} B}{f}
-			%                 }
-			%             }
-			%         }
-			%         &
-			%         \deduce{{-} \mid \Delta \vdash_{\RI} C}{g}
-			%     }
-			%     }
-			% &
-			\begin{array}{c}
-				\defeq
-			\end{array}
-			&
-			\proofbox{
-				\infer[\tr^{\RI}_{\Gamma'_1 , A}]{S \mid \Gamma_0 , \Delta \vdash_{\RI} \ldbc \Gamma'_1 \mid (A \lolli B) \rdbc_{\lolli} \ot C}{
-					\deduce{S \mid \Gamma' , A , \Gamma'' \vdash_{\RI} B}{f}
-					&
-					\deduce{{-} \mid \Delta \vdash_{\RI} C}{g}
+	We prove admissibility by mutual induction on the left premise of each rules. Notice that we use $\Gamma^{\Gamma^{\bullet}_1}$ to indicate some formulae in $\Gamma$ is tagged and the list of tagged formulae is $\Gamma_1$.
+	\newline
+	Proof of $\tr_{\Gamma'}^{\RI}$:
+	\begin{itemize}
+		\item If $f = \lright \text{ } (\ex \text{ } (\RI 2 \C \text{ } f'))$, we extend $\iota : \Gamma_0 ; (\Gamma_{10} , \Gamma_{11}) \bowtie (\Gamma' , \Gamma'')$ and $(\Gamma_{10} , \Gamma_{11}) \lrwavy \Gamma'_1$ with $A$, the active formula in $\lright \text{ } (\ex \text{ } (\RI 2 \C \text{ } f'))$, then we have $\iota' : \Gamma_0 ; (\Gamma_{10} , A , \Gamma_{11}) \bowtie (\Gamma' , A , \Gamma'')$, $(\Gamma_{10} , A , \Gamma_{11}) \lrwavy (\Gamma'_1 , A)$ and
+			% \defeq \tr_{\Gamma' , A}^{\RI} \text{ } (f , g)
+			\begin{displaymath}
+				\footnotesize
+				\begin{array}{c}
+					\hspace*{-3cm}
+				    \proofbox{
+				    \infer[\tr^{\RI}_{\Gamma'_1}]{S \mid \Gamma_0 , \Delta \vdash_{\RI} \ldbc \Gamma'_1 \mid (A \lolli B) \rdbc_{\lolli} \ot C}{
+				        \infer[\lright]{S \mid \Gamma' , \Gamma'' \vdash_{\RI} A \lolli B}{
+				            \infer[\ex]{S \mid A \spl \Gamma' , \Gamma'' \vdc B}{
+				                \infer[\RI 2 \C]{S \mid \quad \spl \Gamma' , A , \Gamma'' \vdash_{\C} B}{
+				                    \deduce{S \mid \Gamma' , A , \Gamma'' \vdash_{\RI} B}{f'}
+				                }
+				            }
+				        }
+				        &
+				        \deduce{{-} \mid \Delta \vdash_{\RI} C}{g}
+				    }
+				    }
+				\\
+					\defeq
+				\proofbox{
+					\infer[\tr^{\RI}_{\Gamma'_1 , A}]{S \mid \Gamma_0 , \Delta \vdash_{\RI} \ldbc \Gamma'_1 \mid (A \lolli B) \rdbc_{\lolli} \ot C}{
+						\deduce{S \mid \Gamma' , A , \Gamma'' \vdash_{\RI} B}{f'}
+						&
+						\deduce{{-} \mid \Delta \vdash_{\RI} C}{g}
+					}
 				}
-			}
-			\end{array}
-		\end{displaymath}
-		$\Gamma_0 ; \Gamma_1 \bowtie (\Gamma' , \Gamma'')$ and $\Gamma_1 \lrwavy \Gamma'_1$ are side conditions of the left hand side and $\Gamma_0 ; (\Gamma_{10} , A , \Gamma_{11}) \bowtie (\Gamma' , A , \Gamma'')$ and
-		$(\Gamma_{10} , A , \Gamma_{11}) \lrwavy (\Gamma'_1 , A)$ are of the right hand side, where $(\Gamma_{10} , \Gamma_{11}) = \Gamma_1$.
-		\item $\tr_{\Gamma'_1}^{\RI} \text{ } (\LI 2 \RI \text{ } f , g) \defeq \LI 2 \RI \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f , g))$.
-	\end{enumerate}
-	Three cases for $\tr_{\Gamma'_1}^{\LI}$:
-	\begin{enumerate}
-		\item $\tr_{\Gamma'_1}^{\LI} \text{ } (\unitl \text{ } f , g) \defeq \unitl \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f , g))$, 
-		\item $\tr_{\Gamma'_1}^{\LI} \text{ } (\tl \text{ } f , g) \defeq \tl \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f , g))$, and
-		\item $\tr_{\Gamma'_1}^{\LI} \text{ } (\Pass 2 \LI \text{ } f , g) \defeq \Pass 2 \LI \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f , g))$.
-	\end{enumerate}
-	$\tr_{\Gamma'_1}^{\Pass}$ is a bit more complicated since the passivated formula could appear in $\Gamma'_1$:
-	\begin{enumerate}
-		\item When passivated formula is in $\Gamma'_1$, then $\tr_{\Gamma'_1}^{\Pass} \text{ } (\pass \text{ } f , g) $ 
-		% \defeq \F 2 \Pass \text{ } (\tr \text ( \lright^{*} \text{ } (\LI 2 \RI \text{ } (\Pass 2 \LI \text{ } (\pass \text{ } f))), g))
-		\begin{displaymath}
-			\footnotesize
-			\begin{array}{ll}
-			% \infer[\tr_{\Gamma'_1}^{\Pass}]{{-} \mid \Gamma_0 , \Delta \vdash_{\Pass} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
-			%     \infer[\pass]{{-} \mid A' , \Gamma \vdash_{\Pass} A}{
-			%         \deduce{A' \mid \Gamma \vdash_{\LI} P}{f}
-			%     }
-			%     &
-			%     \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
-			% }
-			% \\[10pt]
-			% \defeq
-			\begin{array}{c}
-				\defeq
-			\end{array}
-			&
-			\proofbox{
-			\infer[\F 2 \Pass]{{-} \mid \Gamma_0 , \Delta \vdash_{\Pass} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
-				\infer[\tr]{{-} \mid \Gamma_0 , \Delta \vdash_{\F} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
-					\infer[\lright^{*}]{{-} \mid \Gamma_0 \vdash^{\bullet}_{\RI} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli}}{
-						\infer[\mathsf{sw}]{{-} \mid A'^{\bullet} , \Gamma^{x} \vdash^{\bullet}_{\RI} P}{
-							\infer[\pass]{{-} \mid A'^{\bullet} , \Gamma^{x} \vdash^{\bullet}_{\Pass} P}{
-								\deduce{A' \mid \Gamma \vdash_{\LI} P}{f}
+				\end{array}
+			\end{displaymath}
+			\item If $f = \LI 2 \RI \text{ } f'$, then $\tr_{\Gamma'_1}^{\RI} \text{ } (\LI 2 \RI \text{ } f' , g) \defeq \LI 2 \RI \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f' , g))$.
+	\end{itemize}
+	Proof of  $\tr_{\Gamma'_1}^{\LI}$:
+	\begin{itemize}
+		\item If $f = \unitl \text{ } f'$, then $\tr_{\Gamma'_1}^{\LI} \text{ } (\unitl \text{ } f' , g) \defeq \unitl \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f' , g))$.
+		\item If $f = \tl \text{ } f'$, then $\tr_{\Gamma'_1}^{\LI} \text{ } (\tl \text{ } f' , g) \defeq \tl \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f' , g))$.
+		\item If $f = \Pass 2 \LI \text{ } f'$, then $\tr_{\Gamma'_1}^{\LI} \text{ } (\Pass 2 \LI \text{ } f' , g) \defeq \Pass 2 \LI \text{ } (\tr_{\Gamma'_1}^{\LI} \text{ } (f' , g))$.
+	\end{itemize}
+	Proof of $\tr_{\Gamma'_1}^{\Pass}$:
+	\begin{itemize}
+		\item If $f = \pass \text{ } f'$, the passivated formula $A'$ can either belong to $\Gamma_0$ or $\Gamma_1$ in $\iota : \Gamma_0 ; \Gamma_1 \bowtie (A' , \Gamma)$, then we do case analysis on $\iota$:
+		\begin{itemize}
+			\item If $\iota = \text{left cons } \iota'$ or right empty, then $\tr_{\Gamma'}^{\Pass} \text{ } (\pass \text{ } f' , g) \defeq \pass \text{ } (\tr_{\Gamma'}^{\Pass} \text{ } (f' , g))$.
+			\item If $\iota = \text{right cons } \iota'$ or left empty, then
+			\begin{displaymath}
+				\footnotesize
+				\begin{array}{c}
+					\hspace*{-4cm}
+				\proofbox{
+				\infer[\tr_{\Gamma'_1}^{\Pass}]{{-} \mid \Gamma_0 , \Delta \vdash_{\Pass} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
+				    \infer[\pass]{{-} \mid A' , \Gamma \vdash_{\Pass} A}{
+				        \deduce{A' \mid \Gamma \vdash_{\LI} P}{f}
+				    }
+				    &
+				    \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
+				}
+				}
+				\\
+				% \defeq
+					\defeq
+				\proofbox{
+				\infer[\F 2 \Pass]{{-} \mid \Gamma_0 , \Delta \vdash_{\Pass} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
+					\infer[\tr]{{-} \mid \Gamma_0 , \Delta \vdash_{\F} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
+						\infer[\lright^{*}]{{-} \mid \Gamma_0 \vdash^{\bullet}_{\RI} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli}}{
+							\infer[\mathsf{sw}]{{-} \mid A'^{\bullet} , \Gamma^{\Gamma^{\bullet}_1} \vdash^{\bullet}_{\RI} P}{
+								\infer[\pass]{{-} \mid A'^{\bullet} , \Gamma^{\Gamma^{\bullet}_1} \vdash^{\bullet}_{\Pass} P}{
+									\deduce{A' \mid \Gamma \vdash_{\LI} P}{f}
+								}
 							}
 						}
+						&
+						\deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
 					}
-					&
-					\deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
 				}
-			}
-			}
-		  \end{array}
-		\end{displaymath}
-		where $\Gamma_0 ; (A' , \Gamma_1) \bowtie (A' , \Gamma)$ and $(A' , \Gamma_1 \lrwavy \Gamma'_1)$.
-		\item $\tr_{\Gamma'}^{\Pass} \text{ } (\pass \text{ } f , g) \defeq \pass \text{ } (\tr_{\Gamma'}^{\Pass} \text{ } (f , g))$, and
-		\item $\tr_{\Gamma'}^{\Pass} \text{ } (\F 2 \Pass \text{ } f , g) \defeq \F 2 \Pass \text{ } (\tr_{\Gamma'}^{\F} \text{ } (f , g)) $.
-	\end{enumerate}
-	Finally, there are five cases for $\tr_{\Gamma'}^{\F}$:
-	\begin{enumerate}
-	  \item $\tr_{\Gamma'_1}^{\F} \text{ } (\ax , g) \defeq \tr \text{ } (\ax , g)$ where $\Gamma'_1$ is empty.
-	  \item $\tr_{\Gamma'_1}^{\F} \text{ } (\unitr , g) \defeq \tr \text{ } (\unitr , g)$ where $\Gamma'_1$ is empty.
-	  \item $\tr_{\Gamma'_1}^{\F} \text{ } (\tr \text{ } (f , f') , g) $
-	  %\defeq \tr \text{ } (\lright^{*} \text{ } (\LI 2 \RI \text{ } (\Pass 2 \LI \text{} (\F 2 \Pass \text{ } (\tr \text{ } (f , f'))))) , g)
+				}
+				\hspace*{-2cm}
+			  \end{array}
+			\end{displaymath}
+		\end{itemize}
+		\item If $f = \F 2 \Pass \text{ } f'$, then $\tr_{\Gamma'_1}^{\Pass} \text{ } (\F 2 \Pass \text{ } f' , g) \defeq \F 2 \Pass \text{ } (\tr_{\Gamma'_1}^{\F} \text{ } (f' , g)) $.
+	\end{itemize}
+	Proof of $\tr_{\Gamma'}^{\F}$:
+	\begin{itemize}
+	  \item If $f = \ax$, then $\Gamma'_1$ is empty and $\tr_{(\text{ })}^{\F} \text{ } (\ax , g) \defeq \tr \text{ } (\ax , g)$.
+	  \item If $f = \unitr$, then $\Gamma'_1$ is empty and $\tr_{(\text{ })}^{\F} \text{ } (\unitr , g) \defeq \tr \text{ } (\unitr , g)$.
+	  \item If $f = \tr \text{ } (f' , f'')$, then we have $\Gamma_0 = (\Gamma_{00} , \Delta_{00})$, $\Gamma_1 = (\Gamma_{10} , \Delta_{10})$, and $\iota : (\Gamma_{00} , \Delta_{00}) ; (\Gamma_{10} , \Delta_{10}) \bowtie (\Gamma , \Delta)$ 
 	  \begin{displaymath}
 		\footnotesize
-		\begin{array}{ll}
-		% \infer[\tr_{\Gamma' , \Delta}^{\F}]{T \mid \Gamma , \Lambda \vdash_{\F} \ldbc \Gamma' , \Delta \mid A \ot B \rdbc_{\lolli} \ot C}{
-		%     \infer[\tr]{T \mid \Gamma , \Gamma' , \Delta \vdash_{\F} A \ot B}{
-		%         \deduce{T \mid \Gamma , \Gamma' \vdash^{\bullet}_{\RI} A}{f}
-		%         &
-		%         \deduce{{-} \mid \Delta \vdash_{\RI} B}{f'}
-		%     }
-		%     &
-		%     \deduce{{-} \mid \Lambda \vdash_{\RI} C}{g}
-		% }
-		% \\[10pt]
 		\begin{array}{c}
-			\defeq
-		\end{array}
-		&
+	    \hspace*{-3cm}
 		\proofbox{
-		\infer[\tr]{T \mid \Gamma_0 , \Lambda \vdash_{\F} \ldbc \Gamma'_1 \mid A \ot B \rdbc_{\lolli} \ot C}{
-			\infer[\lright^{*}]{T \mid \Gamma_0 \vdash^{\bullet}_{\RI} \ldbc \Gamma'_1 \mid A \ot B \rdbc_{\lolli}}{
-				\infer[\mathsf{sw}]{T \mid \Gamma^{x} , \Delta^{x} \vdash^{\bullet}_{\RI} A \ot B}{
-					\infer[\tr]{T \mid \Gamma^{x} , \Delta^{x} \vdash^{\bullet}_{\F} A \ot B}{
-						\deduce{T \mid \Gamma \vdash^{\bullet}_{\RI} A}{f}
+		\infer[\tr_{\Gamma'_1}^{\F}]{T \mid \Gamma_{00} , \Delta_{00} , \Lambda \vdash_{\F} \ldbc \Gamma'_1 \mid A \ot B \rdbc_{\lolli} \ot C}{
+		    \infer[\tr]{T \mid \Gamma , \Delta \vdash_{\F} A \ot B}{
+		        \deduce{T \mid \Gamma \vdash^{\bullet}_{\RI} A}{f'}
+		        &
+		        \deduce{{-} \mid \Delta \vdash_{\RI} B}{f''}
+		    }
+		    &
+		    \deduce{{-} \mid \Lambda \vdash_{\RI} C}{g}
+		}
+		}
+		\\
+			\defeq
+		\proofbox{
+		\infer[\tr]{T \mid \Gamma_{00} , \Delta_{00} , \Lambda \vdash_{\F} \ldbc \Gamma'_1 \mid A \ot B \rdbc_{\lolli} \ot C}{
+			\infer[\lright^{*}]{T \mid \Gamma_{00} , \Delta_{00} \vdash^{\bullet}_{\RI} \ldbc \Gamma'_1 \mid A \ot B \rdbc_{\lolli}}{
+				\infer[\mathsf{sw}]{T \mid \Gamma^{\Gamma^{\bullet}_{10}} , \Delta^{\Delta^{\bullet}_{10}} \vdash^{\bullet}_{\RI} A \ot B}{
+					\infer[\tr]{T \mid \Gamma^{\Gamma^{\bullet}_{10}} , \Delta^{\Delta^{\bullet}_{10}} \vdash^{\bullet}_{\F} A \ot B}{
+						\deduce{T \mid \Gamma \vdash^{\bullet}_{\RI} A}{f'}
 						&
-						\deduce{{-} \mid \Delta \vdash_{\RI} B}{f'}
+						\deduce{{-} \mid \Delta \vdash_{\RI} B}{f''}
 					}
 				}
 			}
@@ -2548,50 +2545,51 @@ There are two main differences with the non-commutative focused calculus in (\re
 			\deduce{{-} \mid \Lambda \vdash_{\RI} C}{g}
 		}
 		}
+		\hspace*{-3cm}
 		\end{array}
 	  \end{displaymath}
-	  where $\Gamma_0 ; \Gamma_1 \bowtie (\Gamma , \Delta)$ and $\Gamma_1 \lrwavy \Gamma'_1$.
-	  \item $\tr_{\Gamma'_1}^{\F} \text{ } (\lleft \text{ } (f , f') , g) \defeq \lleft \text{ } (f , \tr_{\Gamma'_1}^{\LI} \text{ } (f' , g))$ when there is no formula in $\Gamma'_1$ comes from $f$.
-	  \item When there is at least one formula in $\Gamma'_1$ appears in $f$, then $\tr_{\Gamma'}^{\F} \text{ } (\lleft \text{ } (f , f') , g)$
-	  %\defeq \tr \text{ } (\lright^{*} \text{ } (\LI 2 \RI \text{ } (\Pass 2 \LI \text{ } (\F 2 \Pass \text{ } (\lleft \text{ } (f , f'))))) , g)
-	  \begin{displaymath}
-		\footnotesize
-	  \begin{array}{ll}
-		% \infer[\tr_{\Gamma'_{0} , D , \Gamma'_1 , \Delta}^{\F}]{A' \lolli B' \mid \Gamma , \Lambda \vdash_{\F} \ldbc \Gamma'_{0} , D , \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
-		%     \infer[\lleft]{A' \lolli B' \mid \Gamma , \Gamma'_0 , D , \Gamma'_1 , \Delta \vdash_{\F} P}{
-		%         \deduce{{-} \mid \Gamma , \Gamma'_0 , D , \Gamma'_1  \vdash_{\RI} P}{f}
-		%         &
-		%         \deduce{B' \mid \Delta \vdash_{\LI} B}{f'}
-		%     }
-		%     &
-		%     \deduce{{-} \mid \Lambda \vdash_{\RI} B}{g}
-		% }
-		% \\[10pt]
-		% \defeq
-		% \\[10pt]
-		\begin{array}{c}
+	  \item If $f = \lleft \text{ } (f' , f'')$, then we have $\Gamma_0 = (\Gamma_{00} , \Delta_{00})$, $\Gamma_1 = (\Gamma_{10} , \Delta_{10})$, and $\iota : (\Gamma_{00} , \Delta_{00}) ; (\Gamma_{10} , \Delta_{10}) \bowtie (\Gamma , \Delta)$.
+	  We do further induction on $\Gamma_{10}$ to check if there is any formula in $\Gamma'_1$ coming from the left premise $f'$.
+	  \begin{itemize}
+		\item If $\Gamma_{10}$ is empty, then $\tr_{\Gamma'_1}^{\F} \text{ } (\lleft \text{ } (f' , f'') , g) \defeq \lleft \text{ } (f' , \tr_{\Gamma'_1}^{\LI} \text{ } (f'' , g))$.
+		\item If $\Gamma_{10} = \Gamma'_{10} , D , \Gamma''_{10}$, then 
+		\begin{displaymath}
+			\footnotesize
+		  \begin{array}{c}
+			\hspace*{-3cm}
+			\proofbox{
+			\infer[\tr_{\Gamma'_1}^{\F}]{A' \lolli B' \mid \Gamma_{00} , \Delta_{00} , \Lambda \vdash_{\F} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
+			    \infer[\lleft]{A' \lolli B' \mid \Gamma , \Delta \vdash_{\F} P}{
+			        \deduce{{-} \mid \Gamma  \vdash_{\RI} A'}{f'}
+			        &
+			        \deduce{B' \mid \Delta \vdash_{\LI} P}{f''}
+			    }
+			    &
+			    \deduce{{-} \mid \Lambda \vdash_{\RI} B}{g}
+			}
+			}
+			\\
 			\defeq
-		\end{array}
-		&
-		\proofbox{
-		\infer[\tr]{A' \lolli B' \mid \Gamma_0 , \Lambda \vdash_{\F} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
-			\infer[\lright^{*}]{A' \lolli B' \mid \Gamma_0 \vdash^{\bullet}_{\RI} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli}}{
-				\infer[\mathsf{sw}]{A' \lolli B' \mid \Gamma^{x}_{00} , D^{\bullet} , \Gamma^{x}_{01} , \Delta^{x} \vdash^{\bullet}_{\RI} P}{
-					\infer[\lleft]{A' \lolli B' \mid \Gamma^{x}_{00} , D^{\bullet} , \Gamma^{x}_{01} , \Delta^{x} \vdash^{\bullet}_{\F} P}{
-						\deduce{{-} \mid \Gamma_{00} , D , \Gamma_{01}  \vdash_{\RI} P}{f}
-						&
-						\deduce{B' \mid \Delta \vdash_{\LI} B}{f'}
+			\proofbox{
+			\infer[\tr]{A' \lolli B' \mid \Gamma_{00} , \Delta_{00} , \Lambda \vdash_{\F} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli} \ot B}{
+				\infer[\lright^{*}]{A' \lolli B' \mid \Gamma_{00} , \Delta_{00} \vdash^{\bullet}_{\RI} \ldbc \Gamma'_1 \mid P \rdbc_{\lolli}}{
+					\infer[\mathsf{sw}]{A' \lolli B' \mid \Gamma^{(\Gamma'_{10} , D , \Gamma''_{10})^{\bullet}} , \Delta^{\Delta^{\bullet}_{10}} \vdash^{\bullet}_{\RI} P}{
+						\infer[\lleft]{A' \lolli B' \mid \Gamma^{(\Gamma'_{10} , D , \Gamma''_{10})^{\bullet}} , \Delta^{\Delta^{\bullet}_{10}} \vdash^{\bullet}_{\F} P}{
+							\deduce{{-} \mid \Gamma \vdash_{\RI} A'}{f'}
+							&
+							\deduce{B' \mid \Delta \vdash_{\LI} P}{f''}
+						}
 					}
 				}
+				&
+				\deduce{{-} \mid \Lambda \vdash_{\RI} B}{g}
 			}
-			&
-			\deduce{{-} \mid \Lambda \vdash_{\RI} B}{g}
-		}
-		}
-	  \end{array}
-	   \end{displaymath}
-	\end{enumerate}
-	Admissibility of $\tr^{\RI}_{\Gamma'_1}$ is proved, now we show how to connect $\tr^{\C}$ and $\tr^{\RI}_{\Gamma'_1}$.
+			}
+			\hspace*{-1cm}
+		  \end{array}
+		   \end{displaymath}
+	  \end{itemize}
+	\end{itemize}
 \end{proof}
 \begin{proposition}
 	The following 2 rules are admissible:
@@ -2642,14 +2640,14 @@ $\tr^{\C \text{-} \RI}$ is proved by induction on left premise $f$:
             
             \proofbox{
             \infer[\RI 2 \C]{S \mid \quad \spl \Gamma , \Delta \vdc A \ot B}{
-                \infer[\tr^{\RI}_{[\text{ }]}]{S \mid \Gamma , \Delta \vdash_{\RI} A \ot B}{
+                \infer[\tr^{\RI}_{(\text{ })}]{S \mid \Gamma , \Delta \vdash_{\RI} A \ot B}{
                     \deduce{S \mid \Gamma \vdash_{\RI} A}{f'}
                     &
                     \deduce{{-} \mid \Delta \vdash_{\RI} B}{g}
                     &
-                    [\text{ }] ; [\text{ }] \bowtie [\text{ }]
+                    (\text{ }) ; (\text{ }) \bowtie (\text{ })
                     &
-                    [\text{ }] \lrwavy [\text{ }]
+                    (\text{ }) \lrwavy (\text{ })
                 }
             }
             }   
